<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user_detail"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.movie.locations.UserDetailActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/userProfileTitleTag1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/user_profile_title_tag"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/userAvatar1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imageview_1_desc"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/userFullNameTag1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/user_full_name_tag_1"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userFullName1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

<!--     <TextView
        android:id="@+id/achievementsTitleTag1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/achievements_title_tag"
        android:textSize="18sp"
        android:textStyle="bold" /> -->

    <TextView
        android:id="@+id/levelTitleTag1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Level"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/levelText1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/miscTitleTag1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Points"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- <TextView
        android:id="@+id/pointsTagText1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current XP"
        android:textSize="14sp"
        android:textStyle="bold" /> -->

    <TextView
        android:id="@+id/pointsText1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <!--
         <Button
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started_button_text" />
    -->

</LinearLayout>